Добавил панель администратора

--- a/Shop/Views/Registration/Index.cshtml
+++ b/Shop/Views/Registration/Index.cshtml
@@ -8,7 +8,7 @@
             <input class="input_auth" type="password" name="auth_pass" placeholder="Введите пароль" required>
             <label>Подтвердите Ваш пароль</label>
             <input class="input_auth" type="password" name="auth_pass" placeholder="Введите пароль" required>
-            <button class="form_auth_button" type="submit" name="form_auth_submit">Зарегистрироваться</button>
+            <button class="btn btn-secondary form_auth_button" type="submit" name="form_auth_submit">Зарегистрироваться</button>
         </form>
     </div>
 </div>
