--- a/Shop/Views/Authorization/Index.cshtml
+++ b/Shop/Views/Authorization/Index.cshtml
@@ -6,9 +6,10 @@
             <input class="input_auth" type="email" name="auth_email" placeholder="Введите Ваш имейл" required>
             <label>Введите Ваш пароль</label>
             <input class="input_auth" type="password" name="auth_pass" placeholder="Введите пароль" required>
-            <button class="form_auth_button" type="submit" name="form_auth_submit">Войти</button>
+            <button class="btn btn-secondary form_auth_button" type="submit" name="form_auth_submit">Войти</button>
+            <a class="btn btn-secondary form_auth_button" asp-controller="Registration" asp-action="Index">Регистрация</a>
         </form>
-        <a class="nav-link text-dark" asp-area="" asp-controller="Registration" asp-action="Index">Регистрация</a>
+        
     </div>
     
 </div>
