--- a/Shop/Views/Shared/Header.cshtml
+++ b/Shop/Views/Shared/Header.cshtml
@@ -18,6 +18,9 @@
                         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Favorites">Нравится</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="Index">Админ</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Authorization" asp-action="Index">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <circle cx="12" cy="7" r="4" stroke="#1D1D1D" stroke-width="2" stroke-linecap="round"></circle>
