Переделал контроллеры аккаунта и представления панели админа

--- a/Shop/Views/Admin/Orders.cshtml
+++ b/Shop/Views/Admin/Orders.cshtml
@@ -8,5 +8,5 @@
         <br />
         <a class="btn btn-secondary " asp-controller="Admin" asp-action="Products">Товары</a>
     </div>
-    <div class="col-6">Заказы</div>
+    <div class="col-6">Список заказов</div>
 </div>
