--- a/Shop/Views/Admin/Roles.cshtml
+++ b/Shop/Views/Admin/Roles.cshtml
@@ -8,5 +8,5 @@
         <br />
         <a class="btn btn-secondary " asp-controller="Admin" asp-action="Products">Товары</a>
     </div>
-    <div class="col-6">Роли</div>
+    <div class="col-6">Список ролей</div>
 </div>
