--- a/Shop/Views/Admin/Users.cshtml
+++ b/Shop/Views/Admin/Users.cshtml
@@ -6,7 +6,7 @@
         <br />
         <a class="btn btn-secondary " asp-controller="Admin" asp-action="Roles">Роли</a>
         <br />
-        <a class="btn btn-secondary " asp-controller="Admin" asp-action="Products">Товары</a>
+        <a class="btn btn-secondary " asp-controller="Admin" asp-action="Products">Список товаров</a>
     </div>
-    <div class="col-6">Пользователи</div>
+    <div class="col-6">Список пользователей</div>
 </div>
