--- a/Shop/Views/Admin/Products.cshtml
+++ b/Shop/Views/Admin/Products.cshtml
@@ -8,5 +8,7 @@
         <br />
         <a class="btn btn-secondary " asp-controller="Admin" asp-action="Products">Товары</a>
     </div>
-    <div class="col-6">Товары</div>
+    <div class="col-6">
+        Список продуктов
+    </div>
 </div>
