--- a/Shop/Views/Admin/Orders.cshtml
+++ b/Shop/Views/Admin/Orders.cshtml
@@ -15,9 +15,9 @@
             {
                 <tr>
                     <td>@order.Id</td>
-                    <td>@order.User.name</td>
-                    <td>@order.User.phone</td>
-                    <td>@order.User.addres</td>
+                    <td>@order.User.Name</td>
+                    <td>@order.User.Phone</td>
+                    <td>@order.User.Addres</td>
                     <td>
                         @foreach(var product in order.Items){
                             <a>@product.Product.Name</a>
