--- a/Shop/Views/Admin/Products.cshtml
+++ b/Shop/Views/Admin/Products.cshtml
@@ -15,7 +15,7 @@
                     <td>@product.Id</td>
                     <td>@product.Name</td>
                     <td>@product.Cost</td>
-                    <td><a href="">Редактировать</a></td>
+                    <td><a href="/admin/editProduct/@product.Id">Редактировать</a></td>
                     <td><a href="/admin/deleteProduct/@product.Id">Удалить</a></td>
                 </tr>
             }
