--- a/Shop/Views/Account/Login.cshtml
+++ b/Shop/Views/Account/Login.cshtml
@@ -1,11 +1,21 @@
-﻿<div class="form_auth_block">
+﻿@model Login
+<div class="form_auth_block">
     <div class="form_auth_block_content">
         <p class="form_auth_block_head_text">Авторизация</p>
         <form class="form_auth_style" action="#" method="post">
-            <label>Введите Ваш имейл</label>
-            <input class="input_auth" type="email" name="username" placeholder="Введите Ваш имейл" required>
-            <label>Введите Ваш пароль</label>
-            <input class="input_auth" type="password" name="password" placeholder="Введите пароль" required>
+            <div>
+                <label asp-for="UserName"></label>
+                <input class="input_auth" type="text" asp-for="UserName" placeholder="Введите ваше имя" />
+                <span asp-validation-for="UserName"></span>
+            </div>
+            
+            <div>
+                <label asp-for="Password"></label>
+                <input class="input_auth" type="password" asp-for="Password" placeholder="Введите пароль" />
+                <span asp-validation-for="Password"></span>
+            </div>
+            
+            
             <button class="btn btn-secondary form_auth_button" type="submit" name="form_auth_submit" asp-controller="Account" asp-action="Login">Войти</button>
             <a class="btn btn-secondary form_auth_button" asp-controller="Account" asp-action="Register">Регистрация</a>
         </form>
