--- a/Shop/Views/Order/Index.cshtml
+++ b/Shop/Views/Order/Index.cshtml
@@ -1,15 +1,27 @@
-﻿<form method="post">
+﻿@model UserDeliveryInfo
+<div class="form_auth_block">
+    <div class="form_auth_block_content">
+        <p class="form_auth_block_head_text">Оформление заказа</p>
+<form method="post">
 <div class="text-center">
-    <h3>ФИО</h3>
-    <input type="type" name="name" value="" />
+        <div>
+            <label asp-for="Name"></label>
+            <input class="input_auth" type="text" asp-for="Name" placeholder="Введите ваше имя" />
+            <span asp-validation-for="Name"></span>
+        </div>
+        <div>
+            <label asp-for="Phone"></label>
+            <input class="input_auth" type="text" asp-for="Phone" placeholder="Введите телефон" />
+            <span asp-validation-for="Phone"></span>
+        </div>
+        <div>
+            <label asp-for="Addres"></label>
+            <input class="input_auth" type="email" asp-for="Addres" placeholder="Введите адрес доставки" />
+            <span asp-validation-for="Addres"></span>
+        </div>
 
-    <h3>Адрес доставки</h3>
-    <input type="type" name="addres" value="" />
-
-    <h3>Телефон</h3>
-    <input type="type" name="phone" value="" />
-    <br />
-    <br />
     <button class="btn btn-secondary" type="submit" asp-controller="Order" asp-action="Buy">Оформить заказ</button>
 </div>
 </form>
+    </div>
+</div>
