--- a/Shop/Views/Shared/Footer.cshtml
+++ b/Shop/Views/Shared/Footer.cshtml
@@ -1,4 +1,4 @@
-﻿<footer class="border-top footer text-muted">
+﻿<footer class="border-bottom footer text-muted">
     <div class="container">
         &copy; 2024 - Shop - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
     </div>
