--- a/Shop/Views/Order/Index.cshtml
+++ b/Shop/Views/Order/Index.cshtml
@@ -16,7 +16,7 @@
         </div>
         <div>
             <label asp-for="Addres"></label>
-            <input class="input_auth" type="email" asp-for="Addres" placeholder="Введите адрес доставки" />
+            <input class="input_auth" type="text" asp-for="Addres" placeholder="Введите адрес доставки" />
             <span asp-validation-for="Addres"></span>
         </div>
 
