--- a/Shop/Views/Account/Login.cshtml
+++ b/Shop/Views/Account/Login.cshtml
@@ -1,4 +1,5 @@
-﻿@model Login
+﻿@using Shop.Areas.Admin.Models
+@model Login
 <div class="form_auth_block">
     <div class="form_auth_block_content">
         <p class="form_auth_block_head_text">Авторизация</p>
