--- a/Shop/Views/Account/Register.cshtml
+++ b/Shop/Views/Account/Register.cshtml
@@ -1,4 +1,5 @@
-﻿@model Register
+﻿@using Shop.Areas.Admin.Models
+@model Register
 
 <div class="form_auth_block">
     <div class="form_auth_block_content">
