--- a/Shop/Areas/Admin/Views/Order/Detail.cshtml
+++ b/Shop/Areas/Admin/Views/Order/Detail.cshtml
@@ -37,5 +37,5 @@
         </div>
     </div>
     <br />
-    <button class="btn btn-success" type="submit" asp-controller="Admin" asp-action="UpdateOrderStatus" asp-route-orderId="@Model.Id">Обновить статус</button>
+    <button class="btn btn-success" type="submit" asp-area="Admin" asp-controller="Order" asp-action="UpdateStatus" asp-route-id="@Model.Id">Обновить статус</button>
 </form>
