--- a/Shop/Areas/Admin/Views/Product/Edit.cshtml
+++ b/Shop/Areas/Admin/Views/Product/Edit.cshtml
@@ -22,7 +22,7 @@
                 <span asp-validation-for="Cost"></span>
             </div>
 
-            <button class="btn btn-secondary form_auth_button" type="submit" name="form_auth_submit" asp-controller="Admin" asp-action="EditProduct">Изменить товар</button>
+            <button class="btn btn-secondary form_auth_button" type="submit" name="form_auth_submit" asp-area="Admin" asp-controller="Product" asp-action="Edit">Изменить товар</button>
         </form>
     </div>
 </div>
