--- a/Shop/Views/Shared/Header.cshtml
+++ b/Shop/Views/Shared/Header.cshtml
@@ -18,7 +18,7 @@
                         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Favorites">Нравится</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="Orders">Админ</a>
+                        <a class="nav-link text-dark" asp-area="Admin" asp-controller="Order" asp-action="Index">Админ</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login">
