В режиме админа добавлена страница для просмотра данных пользователей, их редактирования и удаления. Теперь у каждого пользователя есть почта, телефон и роль

--- a/Shop/Areas/Admin/Views/User/Index.cshtml
+++ b/Shop/Areas/Admin/Views/User/Index.cshtml
@@ -1,4 +1,35 @@
-﻿<div class="row">
+﻿@model List<UserAccount>
+<div class="row">
     @await Html.PartialAsync("AdminLeftPanel")
-    <div class="col-6">Список пользователей</div>
+    <div class="col-9">
+        <h1>Список пользователей</h1>
+        <table class="table">
+            <tr>
+                <td>№</td>
+                <td>Пользователь</td>
+                <td>Почта(логин)</td>
+                <td>Телефон</td>
+                <td>Права</td>
+                <td></td>
+            </tr>
+            @foreach (var order in Model)
+            {
+                <tr>
+                    <td>@order.Id</td>
+                    <td>@order.Name</td>
+                    <td>@order.Email</td>
+                    <td>@order.Phone</td>
+                    <td>@order.Role.Name</td>
+                    <td>
+                        <a asp-area="admin"
+                           asp-controller="user"
+                           asp-action="detail"
+                           asp-route-id="@order.Id">подробнее</a>
+                    </td>
+                </tr>
+            }
+
+        </table>
+        <a asp-area="Admin" asp-controller="User" asp-action="Add">Добавить пользователя</a>
+    </div>
 </div>
