--- a/Shop/Views/Account/Register.cshtml
+++ b/Shop/Views/Account/Register.cshtml
@@ -2,13 +2,25 @@
 
 <div class="form_auth_block">
     <div class="form_auth_block_content">
-        <p class="form_auth_block_head_text">Авторизация</p>
+        <p class="form_auth_block_head_text">Регистрация</p>
         <form class="form_auth_style" action="#" method="post">
 
             <div>
                 <label asp-for="UserName"></label>
                 <input class="input_auth" type="text" asp-for="UserName" placeholder="Введите ваше имя" />
                 <span asp-validation-for="UserName"></span>
+            </div>
+            
+            <div>
+                <label asp-for="UserEmail"></label>
+                <input class="input_auth" type="email" asp-for="UserEmail" placeholder="Введите ваш email" />
+                <span asp-validation-for="UserEmail"></span>
+            </div>
+
+            <div>
+                <label asp-for="UserPhone"></label>
+                <input class="input_auth" type="text" asp-for="UserPhone" placeholder="Введите ваш телефон" />
+                <span asp-validation-for="UserPhone"></span>
             </div>
 
             <div>
@@ -22,7 +34,7 @@
                 <input class="input_auth" type="password" asp-for="ConfirmPassword" placeholder="Повторите пароль" />
                 <span asp-validation-for="ConfirmPassword"></span>
             </div>
-            <div asp-validation-summary="All"></div>
+            <div asp-validation-summary="ModelOnly"></div>
             <br />
             <button class="btn btn-secondary form_auth_button" type="submit" name="form_auth_submit" asp-controller="Account" asp-action="Register">Зарегистрироваться</button>
             
