--- a/Shop/Areas/Admin/Views/User/ChangePassword.cshtml
+++ b/Shop/Areas/Admin/Views/User/ChangePassword.cshtml
@@ -5,7 +5,7 @@
         <form class="form_auth_style" action="#" method="post">
 
             <div>
-                <label asp-for="Password">Пароль</label>
+                <label asp-for="Password">Новый пароль</label>
                 <input class="input_auth" type="text" asp-for="Password"/>
                 <span asp-validation-for="Password"></span>
             </div>
@@ -21,5 +21,4 @@
             <button class="btn btn-secondary form_auth_button" type="submit" name="form_auth_submit" asp-area="Admin" asp-controller="User" asp-action="ChangePassword">Сменить</button>
         </form>
     </div>
-
 </div>
