--- a/Shop/Areas/Admin/Views/Product/Index.cshtml
+++ b/Shop/Areas/Admin/Views/Product/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@model List<Product>
+
 <div class="row">
     @await Html.PartialAsync("AdminLeftPanel")
     <div class="col-9">
@@ -21,11 +22,25 @@
                         asp-action="Edit"
                         asp-route-id="@product.Id">Редактировать</a></td>
                     <td>
-                        <a 
-                           asp-area="Admin"
-                           asp-controller="Product"
-                           asp-action="Delete"
-                           asp-route-id="@product.Id">Удалить</a>
+                        <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                            Удалить
+                        </button>
+
+                        <form method="post" asp-area="Admin" asp-controller="Product" asp-action="Delete" asp-route-id="@product.Id">
+                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-body">
+                                        Вы действительно хотите удалить данный продукт?
+                                    </div>
+                                    <div class="modal-footer">
+                                            <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Закрыть</button>
+                                            <button type="submit" class="btn btn-secondary">Удалить</button>
+                                    </div>
+                                </div>
+                            </div>
+                            </div>
+                        </form>
                     </td>
                 </tr>
             }
@@ -33,3 +48,6 @@
         </table>
     </div>
 </div>
+
+<!-- Modal -->
+
