--- a/Shop/Areas/Admin/Views/User/Add.cshtml
+++ b/Shop/Areas/Admin/Views/User/Add.cshtml
@@ -5,25 +5,25 @@
         <form class="form_auth_style" action="#" method="post">
 
             <div>
-                <label asp-for="Name"></label>
+                <label asp-for="Name">Имя</label>
                 <input class="input_auth" type="text" asp-for="Name" placeholder="Введите ваше имя" />
                 <span asp-validation-for="Name"></span>
             </div>
 
             <div>
-                <label asp-for="Email"></label>
+                <label asp-for="Email">Почта</label>
                 <input class="input_auth" type="email" asp-for="Email" placeholder="Введите ваш email" />
                 <span asp-validation-for="Email"></span>
             </div>
 
             <div>
-                <label asp-for="Phone"></label>
+                <label asp-for="Phone">Телефон</label>
                 <input class="input_auth" type="text" asp-for="Phone" placeholder="Введите ваш телефон" />
                 <span asp-validation-for="Phone"></span>
             </div>
 
             <div>
-                <label asp-for="Password"></label>
+                <label asp-for="Password">Пароль</label>
                 <input class="input_auth" type="password" asp-for="Password" placeholder="Введите пароль" />
                 <span asp-validation-for="Password"></span>
             </div>
