--- a/Shop/Views/Home/Favorites.cshtml
+++ b/Shop/Views/Home/Favorites.cshtml
@@ -3,8 +3,6 @@
 @{
     ViewData["Title"] = "Home Page";
 }
-
-<body style="background-color: azure">
   
 @if(Model.Count == 0)
 {
@@ -24,7 +22,9 @@ else
                         </svg>
                     </a>
                 </div>
-            <img src=@product.ImagePath class="card-img-top" alt="...">
+                <a href="/product/index/@product.Id">
+                    <img src=@product.ImagePath class="card-img-top" alt="...">
+                </a>
             <div class="card-body">
                 <a href="/product/index/@product.Id">
                         <h5 class="card-title name-product">@product.Name</h5>
@@ -36,4 +36,3 @@ else
 }
 </div>
 }
-</body>
