--- a/Shop/Views/Shared/_Layout.cshtml
+++ b/Shop/Views/Shared/_Layout.cshtml
@@ -16,7 +16,9 @@
         </main>
     </div>
 
-    @await Html.PartialAsync("Footer")
+    <div class="container-footer">
+        @await Html.PartialAsync("Footer")
+    </div>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
