Подключение БД Sql-Server, начало работы с Entity Framework. Изменения, временна удалена функция лайка, переработы модели товара и заказа под БД

--- a/Shop/Areas/Admin/Views/Product/Edit.cshtml
+++ b/Shop/Areas/Admin/Views/Product/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Product
+﻿@model ProductViewModel
 <div class="form_auth_block">
     <div class="form_auth_block_content">
         <p class="form_auth_block_head_text">Изменение продукта</p>
