Добавил в БД таблицу заказов, переписал соответствующую логику

--- a/Shop/Views/Order/Index.cshtml
+++ b/Shop/Views/Order/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model UserDeliveryInfo
+﻿@model UserDeliveryInfoViewModel
 <div class="form_auth_block">
     <div class="form_auth_block_content">
         <p class="form_auth_block_head_text">Оформление заказа</p>
