Начало работы с Identify. Переписал авторизацию и регистрацию на Identify классы.

--- a/Shop/Views/Account/Login.cshtml
+++ b/Shop/Views/Account/Login.cshtml
@@ -21,7 +21,7 @@
             <a class="btn btn-secondary form_auth_button" asp-controller="Account" asp-action="Register">Регистрация</a>
             
         </form>
-        
+        <div asp-validation-summary="All"></div>
     </div>
     
 </div>
