--- a/Shop/Views/Account/Register.cshtml
+++ b/Shop/Views/Account/Register.cshtml
@@ -39,5 +39,6 @@
             <button class="btn btn-secondary form_auth_button" type="submit" name="form_auth_submit" asp-controller="Account" asp-action="Register">Зарегистрироваться</button>
             
         </form>
+        <div asp-validation-summary="All"></div>
     </div>
 </div>
