Переделал логику работы с пользователями и ролями в режиме администратора на Identity

--- a/Shop/Areas/Admin/Views/Role/Index.cshtml
+++ b/Shop/Areas/Admin/Views/Role/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<Role>
+﻿@model List<IdentityRole>
 <div class="row">
     @await Html.PartialAsync("AdminLeftPanel")
     <div class="col-9">
