--- a/Shop/Areas/Admin/Views/User/ChangePassword.cshtml
+++ b/Shop/Areas/Admin/Views/User/ChangePassword.cshtml
@@ -4,6 +4,8 @@
         <p class="form_auth_block_head_text">Смена пароля</p>
         <form class="form_auth_style" action="#" method="post">
 
+            <input type="hidden" name="UserId" value="@Model.UserId"/>
+
             <div>
                 <label asp-for="Password">Новый пароль</label>
                 <input class="input_auth" type="text" asp-for="Password"/>
