--- a/Shop/Areas/Admin/Views/User/Detail.cshtml
+++ b/Shop/Areas/Admin/Views/User/Detail.cshtml
@@ -1,4 +1,4 @@
-﻿@model UserAccount
+﻿@model UserViewModel
 
 <div class="row">
     <div class="col-6">
@@ -14,10 +14,6 @@
             <tr>
                 <td>Телефон</td>
                 <td>@Model.Phone</td>
-            </tr>
-            <tr>
-                <td>Права</td>
-                <td>@Model.Role.Name</td>
             </tr>
         </table>
     </div>
