--- a/Shop/Areas/Admin/Views/User/Edit.cshtml
+++ b/Shop/Areas/Admin/Views/User/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model UserAccount
+﻿@model UserViewModel
 <div class="form_auth_block">
     <div class="form_auth_block_content">
         <p class="form_auth_block_head_text">Редактирование данных</p>
