--- a/Shop/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Shop/Areas/Admin/Views/_ViewImports.cshtml
@@ -2,4 +2,5 @@
 @using Shop.Models
 @using Shop.Areas.Admin.Models
 @using Shop.Helpers
+@using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
