--- a/Shop/Areas/Admin/Views/Role/Add.cshtml
+++ b/Shop/Areas/Admin/Views/Role/Add.cshtml
@@ -1,4 +1,4 @@
-﻿@model Role
+﻿@model IdentityRole
 <div class="form_auth_block">
     <div class="form_auth_block_content">
         <p class="form_auth_block_head_text">Создание роли</p>
